# bar

./: .gitignore  CMakeLists.txt  README.md  build.sh  default.nix  flake.nix  glfw.patch
src/: bar.cc  bar.hh  block.cc  block.hh  blocks.hh  bufdraw.cc  bufdraw.hh  cancel.hh  color.hh  config.def.hh  config.hh  draw.cc  draw.hh  events.hh  executor.hh  format.hh  guard.cc  guard.hh  log.cc  log.hh  loop.cc  loop.hh  main.cc  run.cc  run.hh  signal.hh  util.cc  util.hh  xdraw.cc  xdraw.hh
src/backends/: base.cc  base.hh  x11.cc  x11.hh
src/backends/x11/: draw.cc  draw.hh  window_backend.cc  window_backend.hh
src/blocks/: battery.cc  battery.hh  clock.cc  clock.hh  cpu.cc  cpu.hh  disk.cc  disk.hh  dwm.cc  dwm.hh  fps.hh  memory.cc  memory.hh  network.cc  network.hh  script.cc  script.hh  systray.cc  systray.hh
src/ui/: connection.cc  connection.hh  draw.hh  fonts.hh  gl.hh  text.cc  text.hh  ui.cc  ui.hh  util.hh  window.cc  window.hh
src/ui/x11/: connection.cc  connection.hh  draw.cc  draw.hh  fonts.hh  util.hh  window.cc  window.hh
